# elec2xic

./: .gitignore  Makefile.am  README.md  autogen.sh  config.h  configure.ac
python/: __init__.py  cell-reader.py  elec-data.py  elec_data.py  jelib.txt  test_cell-reader.py  test_elec_data.py
python/elecdata/: __init__.py  base_classes.py  elec_cell.py  elec_data.py  elec_jelib.py  elec_lines.py  mtest.py  test_elec_data.py  test_elec_line.py  watcher.py
python/wrxic/: __init__.py  base_classes.py  cells.xic  test_wr_shapes.py  wr_layout.py
src/: Makefile.am  configure.ac  jelib_defs.h  jelib_flex.l  jelib_gram.y
