# ---------------------------------------------------------------------------
#  E L E C 2 X I C / M a k e f i l e . a m
#  created Thu Jun 20, 2024 11:48 am by: Gary Delp
# ---------------------------------------------------------------------------
#   Copyright (c) 2024 by Gary Delp. All Rights Reserved Worldwide.
#    Licensed under the Apache License, Version 2.0
# ---------------------------------------------------------------------------
# -Commentary:
#  (Last Emacs Update:  Thu Jun 20, 2024  1:21 pm by Gary Delp v-0.1.4)
#
# Thu Jun 20, 2024  1:20 pm by Gary Delp v-0.1.2:
#      Intialize
# -start of: SRC/Makefile.am

SUBDIRS = src
dist_doc_DATA = README LICENSE
