# ---------------------------------------------------------------------------
#  S R C / M a k e f i l e . a m
#  created Thu Jun 20, 2024 11:48 am by: Gary Delp
# ---------------------------------------------------------------------------
#   Copyright (c) 2024 by Gary Delp. All Rights Reserved Worldwide.
#    Licensed under the Apache License, Version 2.0
# ---------------------------------------------------------------------------
# -Commentary:
#  (Last Emacs Update:  Thu Jun 20, 2024 12:20 pm by Gary Delp v-0.1.2)
#
# Thu Jun 20, 2024 11:50 am by Gary Delp v-0.1.0:
#      Header template expanded
# -start of: SRC/Makefile.am
