# ---------------------------------------------------------------------------
#  S R C / M a k e f i l e . a m
#  created Thu Jun 20, 2024 11:48 am by: Gary Delp
# ---------------------------------------------------------------------------
#   Copyright (c) 2024 by Gary Delp. All Rights Reserved Worldwide.
#    Licensed under the Apache License, Version 2.0
# ---------------------------------------------------------------------------
# -Commentary:
#  (Last Emacs Update:  Fri Jun 21, 2024  8:47 pm by Gary Delp v-0.1.4)
#
# Fri Jun 21, 2024  8:47 pm by Gary Delp v-0.1.4:
#
# -start of: SRC/Makefile.am

bin_PROGRAMS = elec2xic

elec2xic_SOURCES = jelib_gram.y elec2xic.c jelib_flex.l
elec2xic_YFLAGS = -d
