# -------------------------------------------------------------------------------
#  S R C / c o n f i g u r e . a c
#  created Thu Jun 20, 2024 11:40 am by: Gary Delp
# -------------------------------------------------------------------------------
#   Copyright (c) 2024 by Gary Delp. All Rights Reserved Worldwide.
#    Licensed under the Apache License, Version 2.0
# -------------------------------------------------------------------------------
# -Commentary:
#  (Last Emacs Update:  Thu Jun 20, 2024 12:18 pm by Gary Delp v-0.1.0)
#
# Thu Jun 20, 2024 12:18 pm by Gary Delp v-0.1.0:
#      Header template expanded
# -start of: SRC/configure.ac
#-O outline from  https://www.gnu.org/savannah-checkouts/gnu/autoconf/
#   manual/autoconf-2.72/html_node/Autoconf-Input-Layout.html
#-O Autoconf requirements 
#-O AC_INIT(package, version, bug-report-address)

AC_INIT([elec2xic], [0.1],[elec2xic-bugs@graceandcharm.info)

#-O information on the package
#-O checks for programs
#-O checks for libraries
#-O checks for header files
AC_CHECK_HEADER([stdio.h],
                [AC_DEFINE([HAVE_STDIO_H], 1,
                   [Define to 1 if you have <stdio.h>.])],
                [AC_MSG_ERROR([sorry, can't do anything for you])])

#-O checks for types
#-O checks for structures
#-O checks for compiler characteristics
#-O checks for library functions
#-O checks for system services
#-O AC_CONFIG_FILES([file])
#-O AC_OUTPUT
